; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/extr_disk-io.c_check_async_write.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/extr_disk-io.c_check_async_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_fs_info = type { i32 }
%struct.btrfs_inode = type { i32 }

@BTRFS_FS_CSUM_IMPL_FAST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.btrfs_fs_info*, %struct.btrfs_inode*)* @check_async_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_async_write(%struct.btrfs_fs_info* %0, %struct.btrfs_inode* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.btrfs_fs_info*, align 8
  %5 = alloca %struct.btrfs_inode*, align 8
  store %struct.btrfs_fs_info* %0, %struct.btrfs_fs_info** %4, align 8
  store %struct.btrfs_inode* %1, %struct.btrfs_inode** %5, align 8
  %6 = load %struct.btrfs_inode*, %struct.btrfs_inode** %5, align 8
  %7 = getelementptr inbounds %struct.btrfs_inode, %struct.btrfs_inode* %6, i32 0, i32 0
  %8 = call i64 @atomic_read(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %19

11:                                               ; preds = %2
  %12 = load i32, i32* @BTRFS_FS_CSUM_IMPL_FAST, align 4
  %13 = load %struct.btrfs_fs_info*, %struct.btrfs_fs_info** %4, align 8
  %14 = getelementptr inbounds %struct.btrfs_fs_info, %struct.btrfs_fs_info* %13, i32 0, i32 0
  %15 = call i64 @test_bit(i32 %12, i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  store i32 0, i32* %3, align 4
  br label %19

18:                                               ; preds = %11
  store i32 1, i32* %3, align 4
  br label %19

19:                                               ; preds = %18, %17, %10
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i64 @test_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
